// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for cGLD->cUSD exchanges with local amounts 1`] = `
<View
  style={
    Object {
      "justifyContent": "center",
      "paddingVertical": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#81868B",
        "fontFamily": "Hind-Regular",
        "fontSize": 16,
        "lineHeight": 24,
        "textAlign": "center",
      }
    }
  >
    exchangeRate
  </Text>
  <Text
    style={
      Object {
        "color": "#2E3338",
        "textAlign": "center",
      }
    }
    testID="ExchangeRateRatio"
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          undefined,
          Object {
            "color": undefined,
          },
        ]
      }
    >
      
      0.1333
       cGLD
    </Text>
     
    : 1 
    EUR
  </Text>
</View>
`;

exports[`renders correctly for cGLD->cUSD exchanges without local amounts 1`] = `
<View
  style={
    Object {
      "justifyContent": "center",
      "paddingVertical": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#81868B",
        "fontFamily": "Hind-Regular",
        "fontSize": 16,
        "lineHeight": 24,
        "textAlign": "center",
      }
    }
  >
    exchangeRate
  </Text>
  <Text
    style={
      Object {
        "color": "#2E3338",
        "textAlign": "center",
      }
    }
    testID="ExchangeRateRatio"
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          undefined,
          Object {
            "color": undefined,
          },
        ]
      }
    >
      
      0.1
       cGLD
    </Text>
     
    : 1 
    cUSD
  </Text>
</View>
`;

exports[`renders correctly for cUSD->cGLD exchanges with local amounts 1`] = `
<View
  style={
    Object {
      "justifyContent": "center",
      "paddingVertical": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#81868B",
        "fontFamily": "Hind-Regular",
        "fontSize": 16,
        "lineHeight": 24,
        "textAlign": "center",
      }
    }
  >
    exchangeRate
  </Text>
  <Text
    style={
      Object {
        "color": "#2E3338",
        "textAlign": "center",
      }
    }
    testID="ExchangeRateRatio"
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          undefined,
          Object {
            "color": undefined,
          },
        ]
      }
    >
      
      7.5
       EUR
    </Text>
     
    : 1 
    cGLD
  </Text>
</View>
`;

exports[`renders correctly for cUSD->cGLD exchanges without local amounts 1`] = `
<View
  style={
    Object {
      "justifyContent": "center",
      "paddingVertical": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#81868B",
        "fontFamily": "Hind-Regular",
        "fontSize": 16,
        "lineHeight": 24,
        "textAlign": "center",
      }
    }
  >
    exchangeRate
  </Text>
  <Text
    style={
      Object {
        "color": "#2E3338",
        "textAlign": "center",
      }
    }
    testID="ExchangeRateRatio"
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          undefined,
          Object {
            "color": undefined,
          },
        ]
      }
    >
      
      10
       cUSD
    </Text>
     
    : 1 
    cGLD
  </Text>
</View>
`;
